# Open-Audit

./: .dockerignore  .env.example  .env.microservices.example  .env.test  .eslintrc.json  .gitignore  .gitleaks.toml  .trivyignore  AGENTS.md  ARCHITECTURE.md  CODEBASE_ANALYSIS.md  CODE_STANDARDS.md  CONTRIBUTING.md  DELIVERABLES.md  Dockerfile  Dockerfile.web  Dockerfile.worker  IMPLEMENTATION_ARCHITECTURE_DOCS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  MICROSERVICES_ARCHITECTURE.md  MICROSERVICES_DELIVERABLES.md  MICROSERVICES_EXECUTIVE_SUMMARY.md  MICROSERVICES_INDEX.md  MICROSERVICES_TESTING_GUIDE.md  MICROSERVICES_VISUAL_GUIDE.md  PR_DESCRIPTION_174.md  PULL_REQUEST.md  PULL_REQUEST_TEMPLATE.md  QUICKSTART_MICROSERVICES.md  QUICK_START.md  README.md  REAL_TIME_STREAMING_SUMMARY.md  RECONCILIATION_DELIVERY.md  RECONCILIATION_IMPLEMENTATION.md  RECONCILIATION_QUICKSTART.md  REGISTRY_LINTER_README.md  REGISTRY_VALIDATION.md  RESILIENCE_DELIVERABLES.md  RESILIENCE_IMPLEMENTATION_GUIDE.md  (+25 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: blueprint_contribution.md
.github/workflows/: blueprint-validation.yml  codeql.yml  docker-build.yml  registry-lint.yml  registry-preview.yml  security-scan.yml  validate-registry.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: AdminDashboardClient.tsx  page.tsx
app/bridge/: BridgeClient.tsx  page.tsx
app/dag/: page.tsx
app/dashboard/: DashboardClient.tsx  page.tsx
app/docs/: page.tsx
app/graph/: page.tsx
cli/: CHEAT_SHEET.md  COMPLETION_CHECKLIST.md  QUICK_START.md  README.md  open-audit-cli.ts  test-cli.bat  test-cli.sh
cli/examples/: token-transfer.json  token-transfer.yaml
components/: NetworkProviderClient.tsx
components/bridge/: BridgeJourneyDetail.tsx  BridgeStatsBar.tsx  CrossChainJourneyCard.tsx
components/dag/: DagExplorer.tsx  DagPanel.tsx  DagTreeNode.tsx  ExecutionDagView.tsx
components/dashboard/: AnalyticsSummaryCards.tsx  ContributeDialog.tsx  EventDetailsModal.tsx  EventFeedTable.test.tsx  EventFeedTable.tsx  ExportDataDialog.tsx  FavoritesSidebar.tsx  FilterBuilder.tsx  Header.tsx  InclusionProofPanel.tsx  RawDataDialog.tsx  SearchBar.tsx  SecurityMetricsDashboard.tsx  StatsBar.tsx  UploadAbiDialog.tsx
components/developer/: SandboxClient.tsx
components/graph/: GraphView.tsx
components/theme/: ThemeToggle.tsx
components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  (+6 more)
docs/: HISTORICAL_INGESTION.md  architecture-simple.md  blueprint.schema.json  good-first-issues.json  v8-gc-tuning.md
formal-verification/: XDRDecoding.dfy  XDRProofs.dfy  XDRScVal.dfy
lib/: export-data.ts  mock-data.ts  telemetry.ts
migrations/: 0001_optimize_translated_event_search.sql  0002_add_ipfs_fields.sql  0002_retention_archive_index.sql  0003_add_dead_letter_event.sql
native/soroban-dsl/: Cargo.toml
native/soroban-dsl/src/: error.rs  eval.rs  lexer.rs  lib.rs  parser.rs  scval.rs
native/soroban-xdr-decode/: Cargo.toml  README.md  build.rs  index.d.ts  package.json
native/soroban-xdr-decode/.cargo/: config.toml
native/soroban-xdr-decode/src/: lib.rs
prisma/: schema.prisma  seed.ts
scripts/: benchmark-search-indexes.sh  ingest-historical.ts  lint-registry.ts  profile-heap.ts  registry-preview.js  retention.ts  test-retention.ts  test-wasm-sandbox.js  test-websocket-client.js  validate-blueprint.js  validate-blueprints-cli.ts  validate-registry.js  validate-registry.ts
(+193 files in other folders)
